# jellyfin-discovery-util

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs
