[package]
name = "jellyfin-discovery-util"
version = "1.0.3"
edition = "2024"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
systemd-journal-logger = "2.2.2"
toml = "0.8.22"
env_logger = "0.11.8"
thiserror = "2.0.12"
bytes = { version = "1.10.1", features = ["serde"] }
